# decompiler

./: .gitignore  Cargo.toml  LICENSE  graph.dot  manual-attempt.txt
decompiler/: Cargo.toml
decompiler/src/: fact.rs  fact_database.rs  iter_singleton.rs  locale.rs  main.rs  powerpc_symbolic.rs
decompiler/src/fact/: basic_block.rs  basic_block_end.rs  branch_target.rs  parse_error.rs  subroutine.rs  subroutine_call.rs
dol/: Cargo.toml
dol/src/: lib.rs  reader.rs  section.rs  sections_iter.rs
gamecube-disc/: Cargo.toml
gamecube-disc/src/: fs_table_reader.rs  header_reader.rs  lib.rs  reader.rs
powerpc/: Cargo.toml
powerpc/src/: branch.rs  condition.rs  cr_constants.rs  gpr_constants.rs  instruction.rs  lib.rs  register.rs
powerpc/src/branch/: bo.rs  condition_behavior.rs  ctr_behavior.rs
powerpc/src/condition/: condition.rs  condition_bit.rs  negative_condition.rs  positive_condition.rs
powerpc/src/instruction/: branch_info.rs  decoded_instruction.rs  encoded_instruction.rs  format_small_i16.rs  format_small_u16.rs  instruction_tests.rs
powerpc/src/register/: crf.rs  gpr.rs  gpr_or_zero.rs  non_zero_gpr.rs  spr.rs
symbolic/: Cargo.toml
symbolic/src/: context.rs  display_expr.rs  display_variable.rs  expr.rs  expr_ref.rs  lib.rs  numbered.rs  tests.rs  variable.rs  variable_ref.rs
work-set/: Cargo.toml
work-set/src/: lib.rs
