[package]
name = "decompiler"
version = "0.1.0"
authors = ["Michael VanBemmel <michael.vanbemmel@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dol = { path = "../dol" }
gamecube-disc = { path = "../gamecube-disc" }
lazy_static = "1"
memmap = "0.7"
num-format = { version = "0.4", features = ["with-system-locale"] }
powerpc = { path = "../powerpc" }
